tests/cases/standard-library/ok/std-prelude-local-shadow.ari
fn Debug() -> i64 {
  return 7;
}

fn main() -> i64 {
  let values: Vec[i64] = [1];
  return Debug() + values[0];
}
