tests/cases/standard-library/errors/prelude/prelude-assert-type.ari
fn main() -> i64 {
  assert(1);
  return 0;
}
